# gamejam-template-bevy

./: .gitignore  Cargo.toml  GameDesignChecklist.md  Makefile.toml  README.md  cargo_generate.toml
game/: Cargo.toml
game/assets/shaders/: post_processing.wgsl
game/src/: main.rs  materials.rs
wasm/: index.html
web/: index.html
{{project-name}}/: Cargo.toml
{{project-name}}/src/: config.rs  debug.rs  desktop_main.rs  game.rs
{{project-name}}/src/components/: mod.rs
{{project-name}}/src/resources/: mod.rs
{{project-name}}/src/scenes/: loading_scene.rs  mod.rs
