[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }

[dependencies]
bevy = "0.8.0"
rand = "0.8.5"

# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"

